不带参数的插件封装玩

--- a/css/jquery.zyslide.css
+++ b/css/jquery.zyslide.css
@@ -1,5 +1,5 @@
 
-body,ul,li{
+/*body,ul,li{
 	margin: 0;
 	padding: 0;
 }
@@ -8,17 +8,18 @@ body{
 	font-size: 13px;
 	color: white;
 	background-color: black;
-}
+}*/
 
-#box{
+.zy-slide {
 	/*两个 section （前一张/下一张）要做相对定位*/
+	font-size: 13px;
 	position: relative;
 	width: 754px;
 	height: 292px;
 	margin: 115px auto 0;
 }
 
-#box .prev,#box .next{
+.zy-slide .zy-prev,.zy-slide .zy-next{
 	position: absolute;
 	top:50%;
 	width: 50px;
@@ -29,22 +30,26 @@ body{
 	cursor: pointer;
 }
 
-#box .prev{
+.zy-slide .zy-prev{
 	left: -60px;
 }
 
-#box .next{
+.zy-slide .zy-next{
 	right: -60px;
 }
 
-#box ul{
+.zy-slide ul{
 	/*让7个 li相对父标签做绝对定位*/
+	margin: 0;
+	padding: 0;
 	position: relative;
 	width: 754px;
 	height: 292px;
 }
 
-#box li{
+.zy-slide li{
+	margin: 0;
+	padding: 0;
 	position: absolute;
 	border: 2px solid black;
 	list-style: none;
@@ -58,7 +63,7 @@ body{
 	cursor: pointer;
 	overflow: hidden;
 }
-#box li img{
+.zy-slide li img{
 	width: 100%;
 	height: 100%;
 }
